--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,9 @@ dependencies {
     implementation 'com.github.avito-tech:krop:0.43'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 
 }
