L&R + Home UI update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.lifecycle:compiler:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'androidx.exifinterface:exifinterface:1.1.0-alpha01'
+    implementation 'id.zelory:compressor:2.1.0'
+    implementation project(':videocompressor')
 
 }
