--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,13 +39,12 @@
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".Timeline.TimelineVideo"
-                  android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".Timeline.TimelineImage"
-                  android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".Preview.PreviewVideo"
-                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".Preview.PreviewImage"
                   android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".CreatePost.CreatePost"
                   android:screenOrientation="portrait"
@@ -56,7 +55,7 @@
         <activity android:name=".Register.Register"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustResize|stateHidden"/>
-        <activity android:name=".Preview.PreviewImage"/>
+
 
     </application>
 
